2005-04-02 Paul Jakma <paul@dishone.st>

	* INSTALL.quagga.txt: Add note about additional CVS build
	  requirements, if one wishes to build ps/pdf docs.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Add strnlen to AC_CHECK_FUNCS.

2005-03-28 Hasso Tepper <hasso at quagga.net>

	* configure.ac, */Makefile.am: Fix previous commit. SNMP includes
	  must be after lib/ includes in some systems. Introduce SNMP_INCLUDES
	  for that.

2005-03-28 Hasso Tepper <hasso at quagga.net>

	* configure.ac: Fix most of "Presents But Cannot Compiled" warnings
	  about various headers. CFLAGS is not correct place to specify
	  includes, INCLUDES is for that.

2005-03-27 Hasso Tepper <hasso at quagga.net>

	* configure.ac: Add Intel compiler (icc) support. Although Intel
	  tries really hard to make icc look like gcc, there are some
	  differences. It's very verbose with -Wall and it doesn't support
	  the individual -W options. We are going to ignore some of these
	  warnings.

2005-03-26 Hasso Tepper <hasso at quagga.net>

	* doc/defines.texi.in, lib/version.h.in: Update copyright string to
	  include year 2005. 

2005-03-25 Jean-Mickael Guerin <jean-mickael.guerin@6wind.com>
	* configure.ac: add struct nd_opt_interval and struct
	  nd_opt_homeagent_info detection.

2005-03-14 Paul Jakma <paul.jakma@sun.com>

	* (global) update all c files to match the lib/vector.h rename of
	  (struct vector).active to max, and vector_max macro to
	  vector_active.
 
2005-03-12 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Solaris 8 can use the newer lifreq based methods
	  too, allows IPv6.

2005-02-19 Hasso Tepper <hasso at quagga.net>

	* configure.ac: Fix Linux detection. Host types like i686-pc-linux
	  didn't match the pattern.

2005-02-09 Paul Jakma <paul.jakma@sun.com>

	* (global) Update code to match stream.h changes.
	  stream_get_putp effectively replaced with stream_get_endp.
	  stream_forward renamed to stream_forward_getp.