@@ -1,3 +1,8 @@
+2005-04-02 Hasso Tepper <hasso at quagga.net>
+
+	* configure.ac: Add --enable-isis-topology to enable isisd topology
+	  generator code.
+
 2005-04-02 Paul Jakma <paul@dishone.st>
 
 	* INSTALL.quagga.txt: Add note about additional CVS build
